# algo_no_std

./: Cargo.toml  README.md
examples/: p0_utility.rs  p117_ranking.rs  p16_egypfrac.rs  p1_exchange_of_values.rs  p27_factrep.rs  p2_luhn.rs  p36_knights_tour.rs  p38_conv2.rs  p44_inverse_mapping_sort.rs  p4_crypt.rs  p60_combination.rs  p6_marriage.rs  p82_greatest_common_divisor.rs  p87_trigonometric_functions.rs  p8_ishi_1.rs
src/: lib.rs
